Révision des noms class et ids 2

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                   Nuit à partir de 25 <strong>€</strong>
                 </p>
                 <div class="leftstars">
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"> </span>
-                  <span class="fas fa-star graystars1"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"> </span>
+                  <span class="fas fa-star leftgraystars"></span>
                 </div>
               </div>
             </a>
@@ -145,11 +145,11 @@
                   Nuit à partir de 52 <strong>€</strong>
                 </p>
                 <div class="leftstars">
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
                 </div>
               </div>
             </a>
@@ -164,11 +164,11 @@
                   Nuit à partir de 76 <strong>€</strong>
                 </p>
                 <div class="leftstars">
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star graystars1"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftgraystars"></span>
                 </div>
               </div>
             </a>
@@ -186,11 +186,11 @@
                   Nuit à partir de 46 <strong>€</strong>
                 </p>
                 <div class="leftstars">
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star graystars1"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftgraystars"></span>
                 </div>
               </div>
             </a>
@@ -205,11 +205,11 @@
                   Nuit à partir de 23 <strong>€</strong>
                 </p>
                 <div class="leftstars">
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star graystars1"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftgraystars"></span>
                 </div>
               </div>
             </a>
@@ -224,11 +224,11 @@
                   Nuit à partir de 96 <strong>€</strong>
                 </p>
                 <div class="leftstars">
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
-                  <span class="fas fa-star bluestars1"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
+                  <span class="fas fa-star leftbluestars"></span>
                 </div>
               </div>
             </a>
@@ -259,11 +259,11 @@
                     Nuit à partir de 128 <strong>€</strong>
                   </p>
                   <div class="rightstars">
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
                   </div>
                 </div>
               </div>
@@ -284,11 +284,11 @@
                     Nuit à partir de 71 <strong>€</strong>
                   </p>
                   <div class="rightstars">
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star graystars2"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightgraystars"></span>
                   </div>
                 </div>
               </div>
@@ -307,11 +307,11 @@
                     Nuit à partir de 68 <strong>€</strong>
                   </p>
                   <div class="rightstars">
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star bluestars2"></span>
-                    <span class="fas fa-star graystars2"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightbluestars"></span>
+                    <span class="fas fa-star rightgraystars"></span>
                   </div>
                 </div>
               </div>
