Corrections version ipad

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     >
-    <title>Booki</title>
+    <title>Location Vacances de Rêve Booki</title>
+    <meta name="description" content="Trouver des Hébergements et des Activités dans la ville de votre choix adaptés à vos besoins pour des Vacances de Rêve" >
   </head>
 
   <body>
@@ -35,12 +36,11 @@
         </ul>
       </nav>
     </header>
-
+<main>
     <!--Section1filters de Recherche et Filtres-->
     <section id="searchandfiltersection">
       <h1>Trouver votre hébergement pour des vacances de rêve</h1>
       <p id="subtitle">En plein centre-ville ou en pleine nature</p>
-
       <!--mise en forme de la barre de recherche-->
       <form id="searchbar" method="post" action="traitement.php">
         <label for="locationsearch">
@@ -239,7 +239,7 @@
         </div>
 
         <!--Panneau Les plus populaires-->
-        <div id="rightpannel">
+        <aside id="rightpannel">
           <div id="titlezone">
             <h3>Les plus populaires</h3>
             <span class="fas fa-star blackstar"></span>
@@ -317,7 +317,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </aside>
       </div>
     </section>
 
@@ -390,7 +390,7 @@
         </div>
       </div>
     </section>
-
+  </main>
     <footer>
       <div id="footercontainer">
         <div class="footerbox">
