correction google font et erreur frappe h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     >
     <title>Location Vacances de Rêve Booki</title>
-    <meta name="description" content="Trouver des Hébergements et des Activités dans la ville de votre choix adaptés à vos besoins pour des Vacances de Rêve" >
+    <meta name="description" content="Trouver des Hébergements et des Activités 
+    dans la ville de votre choix adaptés à vos besoins pour des Vacances de Rêve" >
   </head>
 
   <body>
