--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
           name="locationsearch"
           placeholder="Marseille, France">
         <button id="searchtext">Rechercher</button>
-        <button id="iconsearch"><i class="fa fa-search"></i></button>
+        <div id="buttoncontainer">
+          <button id="iconsearch"><i class="fa fa-search"></i></button>
+          <div id="borderbutton"></div>
+        </div>
       </form>
 
       <!--Les Filtres-->
