modif de l'emplacement de l'icone loupe et rectif sur la barre de reccherche taille et centrage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="fr">
   <head>
     <meta charset="utf-8" >
@@ -57,8 +57,8 @@
           placeholder="Marseille, France">
         <button id="searchtext">Rechercher</button>
         <div id="buttoncontainer">
-          <button id="iconsearch"><i class="fa fa-search"></i></button>
           <div id="borderbutton"></div>
+          <button id="iconsearch"><i class="fa fa-search"></i></button>
         </div>
       </form>
 
